# tiplink

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md
.cargo/: config.toml
.sqlx/: query-044d8fac4a8548bc86a2e3e71182a88ef473f8e4dfacc05f86fe7668f7f59908.json  query-05935ef68d68996babdcff8e99009558c42981838d1da45e51e7769f5ae61639.json  query-10c91d01420cf0a7e0c5957e7dcb2a3019d159a98cb381e47dae4e668acb917b.json  query-180587ffc9b9b09325cf0861121db0f71781b8209f2207c1a044c656c349bb0d.json  query-233786571a4566ae10703c3005246b1970d0ee83ff48803ae31e5aab9c2efe4a.json  query-263907301b8f390a3ebd358960670f3ef064d19e5931da5ecf8fee9a1b405185.json  query-2875fee1d67b47c848f66e018648e6a4b4629832505c84fd00772b3d68bdbc34.json  query-2bf9e060bc3af09e2801d9e47a646b05581ddfbdb2b6bfed34b78eceaada41d1.json  query-343d78131e3f514e944cb884d20ac25e69ea219333e062be6cc06ff0c0965b7c.json  query-3635d734beece9bfbe626c0bae31b334af9327af005f77d657c4f06467e9cca8.json  query-4663617ed7607fe71144b902563bf16f86bd1f4720cb6e5c164212726f926543.json  query-4f2ef1d9e058b6b759b42dbc5c1e3715df8154b4552dfb0c92c34aa95a12188e.json  query-57c499bb660b12c752aea962145c25acbc58b8e7737ce5013b589230caf926f9.json  query-5f739aefb6aeb053413147b981a3cb9ae59522fd2593e07aa7c3cc5b31be6680.json  query-68429282dc1343edb7d70e1f817d9b68806be89fbf49f795bb551cc1f3075715.json  query-6d44e4633fe5e23f54bd835859a7777c5edecf21bebf61cc899b705cb0bbec66.json  query-6f31249b531f01d44b1565ad07f4373b4bb50c0f4f54d6853c1a8c1730f99265.json  query-6fe74ed0039aaa0c5be1b74bbc897f1bd6a6a6fb54d4acb7ce4e827c48c96385.json  query-75d30616d1621d13a503b429288d63c444975785360fd2973a1e12d87ea8476d.json  query-7b8150900b491378f0d290f44ea12b739b696db012f8ebff65189a31ba9a6097.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-885927d8b8b9143368eba120ff7bcfd6bb874fa840efdde4478e9b19c31a6775.json  query-91299502880368cd822aa5a19a482ace12620b7941d47b886059c58f1f915f89.json  (+21 more)
backend/: .env.example  Cargo.toml
backend/src/: config.rs  main.rs
backend/src/db/: dto.rs  mod.rs
backend/src/db/migrations/: 02_wallet_txn.sql  04_swap_tokens.sql  05_payment_links.sql
backend/src/middlewares/: auth.rs
backend/src/modules/: dto.rs  mod.rs
backend/src/modules/auth/: dto.rs  handlers.rs  mod.rs  routes.rs  services.rs
backend/src/modules/link/: dto.rs  handlers.rs  mod.rs  routes.rs  services.rs
backend/src/modules/swap/: dto.rs  handlers.rs  mod.rs  routes.rs  services.rs
backend/src/modules/user/: dto.rs  handlers.rs  mod.rs  routes.rs  services.rs
backend/src/modules/wallet/: dto.rs  handlers.rs  mod.rs  routes.rs  services.rs
backend/src/routes/: lones.rs  mod.rs  solana.rs  user.rs
backend/src/utils/: api_response.rs  app_error.rs  jupiter.rs  mod.rs  mpc.rs  response.rs
indexer/: Cargo.toml
indexer/src/: config.rs  main.rs
indexer/src/webhooks/: dto.rs  mod.rs  webhook.rs
mpc/: Cargo.toml
mpc/src/: config.rs  dto.rs  errors.rs  handlers.rs  main.rs  middlewares.rs  routes.rs  services.rs
store/: Cargo.toml
store/migrations/: 01_create_users.sql  03_wallet_balances.sql  04_swap_tokens.sql  05_payment_links.sql  06_wallet_balances_unique.sql  07_wallet_key_encrypted_privkey.sql
store/src/: balances.rs  dto.rs  lib.rs  payment_links.rs  pool.rs  swap_quotes.rs  transactions.rs  users.rs  wallet_keys.rs
