[package]
name = "indexer"
version = "0.1.0"
edition = "2024"

[dependencies]
store = { path = "../store" }

actix-cors = "0.7.1"
actix-web  = "4.13.0"

serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono             = { version = "0.4", features = ["serde"] }
uuid               = { version = "1",   features = ["v4"] }
dotenv             = "0.15"
reqwest            = { version = "0.12", features = ["json"] }
tokio              = { version = "1",    features = ["rt-multi-thread"] }
