[package]
name = "mpc"
version = "0.1.0"
edition = "2024"

[dependencies]
store            = { path = "../store" }

actix-web        = "4.12.1"
actix-cors       = "0.7.1"
serde            = { version = "1.0.228", features = ["derive"] }
serde_json       = "1.0.149"
tokio            = { version = "1", features = ["full"] }
dotenv           = "0.15.0"
tracing          = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
derive_more      = "2.1.1"
hex              = "0.4"
sha2             = "0.10"
hmac             = "0.12"
base64           = "0.22"
uuid             = { version = "1.21.0", features = ["v4"] }
anyhow           = "1.0.101"

# Solana
solana-sdk        = "2.2"
solana-rpc-client = "2.2"
bs58              = "0.5"
bincode           = "1"

# SPL
spl-token                    = { version = "6", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "4", features = ["no-entrypoint"] }

# Encryption
aes-gcm  = "0.10"
