[package]
name = "store"
version = "0.1.0"
edition = "2024"

[dependencies]
bcrypt = "0.18.0"
chrono = { version = "0.4.44", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "uuid", "json", "tls-rustls"] }
tokio = { version = "1.49.0", features = ["full"] }
uuid = { version = "1.21.0", features = ["v4"] }
